[package]
name = "rustchain-witness"
version = "1.0.0"
edition = "2021"
authors = ["ClawdBot <universe7creator>"]
description = "RustChain epoch witness format for vintage media - floppies, ZIP disks, cassette tapes"
license = "MIT"
repository = "https://github.com/Scottcjn/rustchain-bounties"

[[bin]]
name = "rustchain-witness"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
qr2term = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[dev-dependencies]
tempfile = "3.10"
